# d-ral

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  devices  pylama.ini  pyproject.toml  pytest.ini  setup.py  templates  tox.ini
.github/workflows/: python-package.yml  python-publish.yml
devices/stm32/f4/: common.yaml  f411xe.yaml  f446xx.yaml
devices/stm32/l4/: common.yaml  l432xx.yaml
dral/: __init__.py  app.py  generator.py  mapping.py  name.py  objects.py  template.py  types.py  utils.py
dral/adapter/: __init__.py  base.py  svd.py  white_black_list.py
dral/core/: context.py  factory.py  generator.py  objects.py
dral/devices/stm32/f4/: stm32f411.svd  stm32f446.svd
dral/devices/test/: structure.yaml  test1.svd
dral/devices/trinamic/tmc22xx/: tmc2209.svd
dral/filter/: __init__.py  banks.py  base.py  black_list.py  exclude.py  groups.py  supervisor.py  white_list.py
dral/forbidden/: cpp.txt
dral/format/: __init__.py  asm.py  base.py  cmake_lib.py  cpp.py  html.py  mbedautomatify.py  python.py  single_file.py
dral/formatter/: __init__.py  base.py  cpp.py  html.py  python.py
dral/formatter/style/: .clang-format  ruff.toml
dral/layout/: __init__.py  base.py  cpp.py  html.py  python.py
dral/mappings/: default.yaml  example.yaml
dral/model/cpp/: bitfield_model.h  group_address_policy.h  layer_offset_policy.h  register_model.h
dral/templates/cpp/: direct.jinja  forbidden.yaml  indirect.jinja  indirect.model.import.jinja  utils.jinja
dral/templates/cpp/mcu/: bank.bitfield.dral  bank.dral  bank.field.dral  bitfield.dral  field.dral  header.jinja  main.jinja  model.import.jinja  peripheral.dral  register.dral
dral/templates/cpp/serial/: bitfield.dral  model.import.dral  peripheral.dral  register.dral
dral/templates/dral/: bank.dral  bank.field.dral  field.dral  header.dral  model.dral  peripheral.dral  register.dral
dral/templates/html/: base.html  bootstrap.css.html  bootstrap.js.html  index.html  utils.html
dral/templates/html/mcu/: main.html  peripheral.dral
dral/templates/mbedAutomatify/: register.dral
dral/templates/model/: cpp.dral
dral/templates/model/cpp/: header.dral  model.dral
dral/templates/model/python/: model.dral
dral/templates/python/: header.jinja  main.jinja  utils.jinja
dral/templates/python/mcu/: device.dral  device.import.dral  field.constructor.dral  field.dral  field.property.dral  header.dral  model.import.dral  peripheral.constructor.dral  peripheral.dral  peripheral.import.dral  register.constructor.dral  register.dral  register.property.dral  register.simple.dral
dral/utils/: __init__.py  name.py  utils.py
example/: black_list.dralwbl  white_list.yaml
generator/: Collection.py  CollectionItem.py  Constant.py  Device.py  DeviceFileParser.py  DeviceItem.py  DralObject.py  Field.py  Generator.py  Object.py  Peripheral.py  Register.py  RegisterFileParser.py  RegisterModel.py
model/cpp/: register_model.h
model/python/: register_model.py
src/dral/: __init__.py  app.py  format.py  generator.py  objects.py  types.py  utils.py
src/dral/adapter/: __init__.py  base.py  svd.py  white_black_list.py
src/dral/devices/stm32/f4/: stm32f411.svd  stm32f446.svd
src/dral/filter/: __init__.py  banks.py  base.py  black_list.py  white_list.py
src/dral/format/: __init__.py  base.py  cmake_lib.py  mbedautomatify.py  single_file.py
src/dral/templates/default/: bank_field.dral  model.dral  register.dral~new
src/dral/templates/mbedAutomatify/: field.dral  peripheral.dral  register.dral  register.simple.dral
templates/: peripheral_collection.dral  peripheral_normal.dral  register.dral  register_model.dral  register_model.h
templates/cmake/: default.dral
templates/default/: banks.dral  field.dral  model.dral
templates/field/normal/: instance.dral
templates/model/: default.dral
templates/peripheral/: collection.dral  default.dral
templates/peripheral/collection/: file.dral  instance.dral
templates/peripheral/normal/: file.dral
templates/register/: default.dral
templates/register/collection/: instance.dral
templates/register/normal/: declaration.dral  instance.dral
tests/: conftest.py  test_adapter.py  test_filters.py  test_generator.py  test_mapping.py  test_template.py  test_types.py  test_utils.py
tests/data/adapter/: arm.example.example1.yaml  arm_example.json  stm32.f4.stm32f411.yaml  stm32.f4.stm32f446.yaml
tests/data/filters/groups/: arm_example.json
tests/data/filters/white_list/: arm.example.wl1.yaml  arm.example.wl2.yaml  arm.example.wl3.yaml
tests/data/filters/white_list/expected/: arm.example.wl1.yaml  arm.example.wl2.yaml  arm.example.wl3.yaml  arm.example.wl4.yaml
tests/data/filters/white_list/input/: arm.example.wl1.yaml  arm.example.wl2.yaml  arm.example.wl3.yaml  arm.example.wl4.yaml
tests/data/generator/cpp/: arm_example.json
tests/data/generator/cpp/mcu/: arm.example.example1.yaml  (+3 more)
tests/data/generator/default/: arm.example.example1.yaml  stm32.f4.stm32f446.yaml  stm32_f4_stm32f411.yaml  stm32_f4_stm32f446.yaml
tests/data/generator/dral/: arm.example.example1.yaml  stm32.f4.stm32f411.yaml  stm32.f4.stm32f446.yaml
tests/data/mapping/expected/: test.mapping.1.yaml  test.mapping.2.yaml
tests/data/mapping/input/: test.mapping.1.yaml  test.mapping.2.yaml
tests/data/svd/: arm_example.svd
tests/data/template/dral/: bank.2.txt  field.2.txt  mapping.2.yaml  peripheral.1.txt  peripheral.2.txt  register.2.txt
tests/data/template/format/: output.root.txt  root.dral
tests/data/template/include/: children.dral  mapping.yaml  output.root.txt  root.dral
tests/data/template/list/: mapping.yaml  output.root.txt  root.dral
tests/data/template/mix/: apple.dral  chapter.dral  content.dral  footer.dral  header.dral  mapping.yaml  output.root.txt  root.dral
tests/data/template/numbers/: mapping.yaml  output.root.txt  root.dral
tests/data/template/simple/: output.root.txt  root.dral
tests/data/template/style/: mapping.yaml  output.root.txt  root.dral
tests/data/types/: devices.yaml  fields.yaml  peripherals.yaml  registers.yaml
(+8 files in other folders)
