[tool.poetry]
name = "dral"
homepage = "https://github.com/gembcior/d-ral"
version = "0.5.3"
description = "D-RAL - Device Register Access Layer"
authors = ["Gembcior <gembcior@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
packages = [{ include = "dral" }]

[tool.poetry.dependencies]
python = "^3.10"
svd2py = "^1.0.1"
rich = "^13.7"
click = "^8.1"
pyyaml = "^6.0"
jinja2 = "^3.1"
natsort = "^8.4"
clang-format = "^18.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-sugar = "^1.0"
pytest-cov = "^5.0"
pytest-clarity = "^1.0"
pylama = "^8.4"
mypy = "^1.10"

[tool.poetry.scripts]
dral = "dral.app:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["dral"]
show_error_codes = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
disable_error_code = ["union-attr"]

[[tool.mypy.overrides]]
module = ["rich.*", "click.*", "svd2py.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 160

[tool.pylama]
max-line-length = 160
format = "pylint"
skip = "*/.tox/*,*/.env/*,**/__init__.py"
linters = "eradicate,mccabe,pycodestyle,pyflakes,pylint"
ignore = """
  W0511,
  E501,
  D1,
  C,
  R,
"""

[tool.pylama.linter.pycodestyle]
ignore = "E203,E501"
max-line-length = 160
