[tool.poetry]
name = "dral"
homepage = "https://github.com/gembcior/d-ral"
version = "0.5.3"
description = "D-RAL - Device Register Access Layer"
authors = ["Gembcior <gembcior@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
packages = [{ include = "dral" }]

[tool.poetry.dependencies]
python = "^3.10"
svd2py = "^1.0.1"
rich = "^13.7"
click = "^8.1"
pyyaml = "^6.0"
jinja2 = "^3.1"
natsort = "^8.4"
clang-format = "^18.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-sugar = "^1.0"
pytest-cov = "^5.0"
pytest-clarity = "^1.0"
mypy = "^1.10"
ruff = "^0.9"

[tool.poetry.scripts]
dral = "dral.app:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["dral"]
show_error_codes = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
disable_error_code = ["union-attr"]

[[tool.mypy.overrides]]
module = ["rich.*", "click.*", "svd2py.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 160
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
