[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dral"]

[project]
name = "dral"
homepage = "https://github.com/gembcior/d-ral"
version = "0.5.3"
description = "D-RAL - Device Register Access Layer"
authors = [
  {name="Gembcior", email= "gembcior@gmail.com"}
]
license = "MIT"
readme = "README.md"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

requires-python = ">=3.10"
dependencies = [
  "rich~=14.0",
  "click~=8.2",
  "svd2py~=1.0",
  "pyyaml~=6.0",
  "jinja2~=3.1",
  "natsort~=8.4",
  "clang-format~=20.1"
]

[dependency-groups]
dev = [
  "pytest~=8.2",
  "pytest-sugar~=1.0",
  "pytest-cov~=5.0",
  "pytest-clarity~=1.0",
  "mypy~=1.10",
  "ruff~=0.9",
  "pyyaml~=6.0",
  "types-PyYAML~=6.0"
]

[project.scripts]
dral = "dral.app:cli"


[tool.mypy]
files = ["dral"]
show_error_codes = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
disable_error_code = ["union-attr"]

[[tool.mypy.overrides]]
module = ["rich.*", "click.*", "svd2py.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 160
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
